# wilson_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/robot/: base_local_planner_params.yaml  costmap_common_params.yaml
config/sim/: costmap_common_params.yaml
include/wilson_ros/: ZoneGenRunner.hpp
launch/: amcl.launch  boot.launch  boot_minimal.launch  coverage.launch  home.launch  home_sim.launch  map_service.launch  mapping.launch  mapping_sim.launch  navigation.launch  navigation_minimal.launch  navigation_sim.launch  navigation_stack.launch  nodelet.launch  planner.launch  sim_amcl_fake.launch  slam_gmapping_pr2.launch  visualization_coverage.launch  visualization_mapping.launch  visualization_navigation.launch  zone_generator.launch
msg/: NavigationData.msg  Zone.msg
rviz/: coverage.rviz  mapping.rviz  navigation.rviz
scripts/: coverage.py  planner.py
src/cell_grid_creator/: CellGridCreator.cpp  GridCell.cpp
src/controller/: Controller.cpp  Controller.hpp  KeyHandler.cpp  KeyHandler.hpp  main.cpp
src/grid_reassigner/: GridReAssigner.cpp
src/zone_generator/: ZoneGenRunner.cpp  ZoneGenerator.cpp  main.cpp
world/: beacons_positions.inc  enviroment4allStudents.inc  enviroment4allStudents1robots.world  enviroment4allStudents1robots_light.world  enviroment4allStudents2robots.world  enviroment4allStudents3robots.world  enviroment4allStudents4robots.world  enviroment4allStudents5robots.world  enviroment4allStudents6robots.world  enviroment4allStudents7robots.world  enviroment4allStudents8robots.world  enviroment4allStudentsZoom.inc  enviroment4allStudents_light.inc  wilsonROSsim1robot.world  wilsonROSsimZoom.inc
world/bitmap/: RaceMap.yaml  nes3_costmap.pgm  nes3_costmap.yaml  sa100.pgm  sa100.yaml
(+8 files in other folders)
